<resources>
    <string name="app_name">DTT Houses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_nr_placeholder">1</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="dtt_real_estate">DTT REAL ESTATE</string>
    <string name="km">km</string>
    <string name="dolor_sign">$</string>
    <string name="layers_icon">Layers icon</string>
    <string name="location_icon">Location icon</string>
    <string name="bath_icon">Bath icon</string>
    <string name="house_content">House image view</string>
    <string name="bed_icon">Bed icon</string>
    <string name="no_search_found">No results found! \n Perhaps try another search?</string>
    <string name="search_not_found_image">Search not found image</string>
    <string name="dtt_logo">DTT logo</string>
    <string name="description">Description</string>
    <string name="mockup_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="location">Location</string>
    <string name="about">ABOUT</string>
    <string name="design_and_development">Design and Development</string>
    <string name="by_dtt">by DTT</string>
    <string name="d_tt_nl">d-tt.nl</string>
    <string name="dtt_banner">DTT banner</string>
    <string name="price_format">%,d</string>
    <string name="search_for_a_home">Search for a home</string>
    <string name="permission_granted_msg">"Permission Granted"</string>
    <string name="about_fragment_runtime_exception">"must implement AboutFragmentCallback"</string>
    <string name="dtt_link_name">d-tt.nl</string>
    <string name="comma">,</string>
</resources>