<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/ivBed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_ivBed"
        android:layout_weight="1"
        android:contentDescription="@string/bed_icon"
        app:srcCompat="@drawable/ic_bed" />

    <TextView
        android:id="@+id/tvNrOfBedrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_tvNrOfBedrooms"
        android:layout_weight="1"
        android:text="@string/_nr_placeholder"
        android:theme="@style/GothamBookDetail" />

    <ImageView
        android:id="@+id/ivBath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_ivBath"
        android:layout_weight="1"
        android:contentDescription="@string/bath_icon"
        app:srcCompat="@drawable/ic_bath" />

    <TextView
        android:id="@+id/tvNrOfBathrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_tvNrOfBathrooms"
        android:layout_weight="1"
        android:text="@string/_nr_placeholder"
        android:theme="@style/GothamBookDetail" />

    <ImageView
        android:id="@+id/ivLayers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_ivLayers"
        android:layout_weight="1"
        android:contentDescription="@string/layers_icon"
        app:srcCompat="@drawable/ic_layers" />

    <TextView
        android:id="@+id/tvNrOfSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_tvNrOfSize"
        android:layout_weight="1"
        android:maxLines="1"
        android:text="@string/_nr_placeholder"
        android:theme="@style/GothamBookDetail" />

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_ivLocation"
        android:layout_weight="1"
        android:contentDescription="@string/location_icon"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/tvLocationDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:lines="1"
        android:text="@string/_nr_placeholder"
        android:theme="@style/GothamBookDetail" />
</LinearLayout>