<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/materialCardViewHouseItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHouseItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivBath"
            app:layout_constraintStart_toEndOf="@+id/tvNrOfBathrooms"
            app:layout_constraintTop_toTopOf="@+id/ivBath"
            app:srcCompat="@drawable/ic_layers" />

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivLayers"
            app:layout_constraintStart_toEndOf="@+id/tvNrOfSize"
            app:layout_constraintTop_toTopOf="@+id/ivLayers"
            app:srcCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/tvNrOfSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_nr_placeholder"
            android:theme="@style/GothamBookDetail"
            app:layout_constraintBottom_toBottomOf="@+id/ivLayers"
            app:layout_constraintStart_toEndOf="@+id/ivLayers"
            app:layout_constraintTop_toTopOf="@+id/ivLayers" />

        <TextView
            android:id="@+id/tvLocationDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_nr_placeholder"
            android:theme="@style/GothamBookDetail"
            app:layout_constraintBottom_toBottomOf="@+id/ivLocation"
            app:layout_constraintStart_toEndOf="@+id/ivLocation"
            app:layout_constraintTop_toTopOf="@+id/ivLocation" />

        <ImageView
            android:id="@+id/ivBath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivBed"
            app:layout_constraintStart_toEndOf="@+id/tvNrOfBedrooms"
            app:layout_constraintTop_toTopOf="@+id/ivBed"
            app:srcCompat="@drawable/ic_bath" />

        <TextView
            android:id="@+id/tvNrOfBathrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_nr_placeholder"
            android:theme="@style/GothamBookDetail"
            app:layout_constraintBottom_toBottomOf="@+id/ivBath"
            app:layout_constraintStart_toEndOf="@+id/ivBath"
            app:layout_constraintTop_toTopOf="@+id/ivBath" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewHouseImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivHouse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/house_placeholder"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="28dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/price"
            android:theme="@style/GothamBookTitle01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardviewHouseImage"
            app:layout_constraintTop_toTopOf="@+id/cardviewHouseImage" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/address"
            android:theme="@style/GothamBookBody"
            app:layout_constraintStart_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        <ImageView
            android:id="@+id/ivBed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/cardviewHouseImage"
            app:layout_constraintStart_toStartOf="@+id/tvAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_bed" />

        <TextView
            android:id="@+id/tvNrOfBedrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_nr_placeholder"
            android:theme="@style/GothamBookDetail"
            app:layout_constraintBottom_toBottomOf="@+id/ivBed"
            app:layout_constraintStart_toEndOf="@+id/ivBed"
            app:layout_constraintTop_toTopOf="@+id/ivBed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>